--- a/supabase-db.html
+++ b/supabase-db.html
@@ -99,7 +99,7 @@
     </div>
     <div class="form-row">
         <label for="node-input-customHeaders"><i class="fa fa-chain"></i> Custom Headers</label>
-        <input type="text" id="node-input-customHeaders" placeholder="customHeaders">
+        <input type="text" id="node-input-customHeaders" placeholder="Custom Headers">
         <input type="hidden" id="node-input-customHeadersType">
     </div>
 </script>
